--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
 <body>
 
   <div class="card">
-    <h1>Vem me dar um carinho? 💕</h1>
-    <p>Pfv 🥺</p>
+    <h1>Vai vir me ver ? 💕</h1>
+    <p> rsrs 🥺</p>
 
     <div class="buttons">
       <button id="yes" onclick="clicouSim()">Sim 💖</button>
@@ -130,3 +130,4 @@
 
 </body>
 </html>
+
